Create a frontend part of the application to search for country data by its partial or full name.
[JS]
* Use the public API Rest Countries
* Write a function fetchCountries (name) that makes an HTTP request for a resource and returns a promise with an array of countries - the result of the request
* Sanitize the entered string with the trim () method
* Apply Debounce on the event handler and make an HTTP request 300ms after the user has stopped typing. Use the lodash.debounce package
* If the backend returned more than 10 countries, a notification appears in the interface that the name should be more specific. Use the notiflix library for notifications
* If the backend returned from 2 to 10 countries, a list of found countries is displayed under the test field. Each item on the list consists of a flag and a country name
* If there is one country, the interface displays the markup of the card with data about the country: flag, name, capital, population and languages
* If the user entered the name of a country which does not exist, the backend will return an error with a status code of 404

--- a/package.json
+++ b/package.json
@@ -26,11 +26,8 @@
     "sass": "^1.43.3"
   },
   "dependencies": {
-    "@vimeo/player": "^2.16.1",
-    "flatpickr": "^4.6.9",
-    "lodash.throttle": "^4.1.1",
+    "lodash.debounce": "^4.0.8",
     "notiflix": "^3.1.0",
-    "simplelightbox": "^2.9.0",
     "src": "^1.1.2"
   }
 }
